--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.jpeg"/>
+  <link rel="icon" type="image/png" href="favicon.png"/>
 
   <title>new_portfolio</title>
   <link rel="manifest" href="manifest.json">
